Clutter reduction Part 2 finished. --ChufanLai

--- a/papers/parallelcoordinates.bib
+++ b/papers/parallelcoordinates.bib
@@ -749,6 +749,22 @@
   Timestamp                = {2015.04.08}
 }
 
+@Article{johansson2006revealing,
+  Title                    = {Revealing structure in visualizations of dense 2D and 3D parallel coordinates},
+  Author                   = {Johansson, Jimmy and Ljung, Patric and Jern, Mikael and Cooper, Matthew},
+  Journal                  = {Information Visualization},
+  Year                     = {2006},
+  Number                   = {2},
+  Pages                    = {125--136},
+  Volume                   = {5},
+
+  __markedentry            = {[chufanlai:1]},
+  File                     = {:Revealing structure in visualizations of dense 2d and 3d parallel coordinates.pdf:PDF},
+  Owner                    = {chufanlai},
+  Publisher                = {SAGE Publications},
+  Timestamp                = {2015.05.20}
+}
+
 @InProceedings{johansson2005revealing,
   Title                    = {Revealing structure within clustered parallel coordinates displays},
   Author                   = {Johansson, Jimmy and Ljung, Patric and Jern, Mikael and Cooper, Matthew},
@@ -1330,10 +1346,10 @@ isualizing\;johansson2009interactive\;tatu2011automated\;wilkinson2006
 high\;yang2003interactive\;zhang2012network\;;
 1 ExplicitGroup:ClutterReduction\;0\;artero2004uncovering\;dang2010sta
 cking\;ellis2006enabling\;fua1999hierarchical\;geng2011angular\;guo201
-0interactive\;heinrich2011evaluation\;johansson2005revealing\;mcdonnel
-l2008illustrative\;muigg2011visual\;novotny2006outlier\;palmas2014edge
-\;peng2004clutter\;siirtola2000direct\;zhou2008visual\;zhou2009splatti
-ng\;;
+0interactive\;heinrich2011evaluation\;johansson2005revealing\;johansso
+n2006revealing\;mcdonnell2008illustrative\;muigg2011visual\;novotny200
+6outlier\;palmas2014edge\;peng2004clutter\;siirtola2000direct\;zachow2
+009visual\;zhou2008visual\;zhou2009splatting\;;
 1 ExplicitGroup:Interaction\;0\;fua1999navigating\;fua2000structure\;h
 auser2002angular\;martin1995high\;;
 1 ExplicitGroup:LineImprovement\;0\;graham2003using\;moustafa2002some\
