--- a/papers/PC_ClutterReduction.bib
+++ b/papers/PC_ClutterReduction.bib
@@ -127,6 +127,21 @@
   Timestamp                = {2015.04.08}
 }
 
+@Article{johansson2006revealing,
+  Title                    = {Revealing structure in visualizations of dense 2D and 3D parallel coordinates},
+  Author                   = {Johansson, Jimmy and Ljung, Patric and Jern, Mikael and Cooper, Matthew},
+  Journal                  = {Information Visualization},
+  Year                     = {2006},
+  Number                   = {2},
+  Pages                    = {125--136},
+  Volume                   = {5},
+
+  File                     = {:Revealing structure in visualizations of dense 2d and 3d parallel coordinates.pdf:PDF},
+  Owner                    = {chufanlai},
+  Publisher                = {SAGE Publications},
+  Timestamp                = {2015.05.20}
+}
+
 @InProceedings{johansson2005revealing,
   Title                    = {Revealing structure within clustered parallel coordinates displays},
   Author                   = {Johansson, Jimmy and Ljung, Patric and Jern, Mikael and Cooper, Matthew},
@@ -246,13 +261,13 @@
 @comment{jabref-meta: groupstree:
 0 AllEntriesGroup:;
 1 ExplicitGroup:Abstraction\;0\;caat2007design\;geng2011angular\;johan
-sson2008screen\;mcdonnell2008illustrative\;muigg2011visual\;novotny200
-6outlier\;;
-1 ExplicitGroup:Clustering\;0\;fua1999hierarchical\;guo2010interactive
-\;heinrich2011evaluation\;palmas2014edge\;siirtola2000direct\;zhou2008
+sson2008screen\;mcdonnell2008illustrative\;muigg2011visual\;zachow2009
 visual\;;
+1 ExplicitGroup:Clustering\;0\;fua1999hierarchical\;guo2010interactive
+\;heinrich2011evaluation\;novotny2006outlier\;palmas2014edge\;siirtola
+2000direct\;zhou2008visual\;;
 1 ExplicitGroup:Sampling\;0\;ellis2006enabling\;;
-1 ExplicitGroup:Reordering\;0\;dang2010stacking\;peng2004clutter\;;
+1 ExplicitGroup:Reordering\;0\;dang2010stacking\;;
 1 ExplicitGroup:Blending\;0\;artero2004uncovering\;johansson2005reveal
 ing\;zhou2009splatting\;;
 }
