Clutter reduction Part 3 finished. --ChufanLai

--- a/papers/PC_ClutterReduction.bib
+++ b/papers/PC_ClutterReduction.bib
@@ -261,11 +261,10 @@
 @comment{jabref-meta: groupstree:
 0 AllEntriesGroup:;
 1 ExplicitGroup:Abstraction\;0\;caat2007design\;geng2011angular\;johan
-sson2008screen\;mcdonnell2008illustrative\;muigg2011visual\;zachow2009
-visual\;;
+sson2008screen\;muigg2011visual\;;
 1 ExplicitGroup:Clustering\;0\;fua1999hierarchical\;guo2010interactive
-\;heinrich2011evaluation\;novotny2006outlier\;palmas2014edge\;siirtola
-2000direct\;zhou2008visual\;;
+\;heinrich2011evaluation\;mcdonnell2008illustrative\;novotny2006outlie
+r\;palmas2014edge\;siirtola2000direct\;zhou2008visual\;;
 1 ExplicitGroup:Sampling\;0\;ellis2006enabling\;;
 1 ExplicitGroup:Reordering\;0\;dang2010stacking\;;
 1 ExplicitGroup:Blending\;0\;artero2004uncovering\;johansson2005reveal
