--- a/papers/parallelcoordinates.bib
+++ b/papers/parallelcoordinates.bib
@@ -1126,6 +1126,18 @@
   Timestamp                = {2015.04.08}
 }
 
+@InProceedings{theisel2000higher,
+  Title                    = {Higher Order Parallel Coordinates.},
+  Author                   = {Theisel, Holger},
+  Booktitle                = {VMV},
+  Year                     = {2000},
+  Pages                    = {415--420},
+
+  File                     = {:Higher order parallel coordinates.pdf:PDF},
+  Owner                    = {chufanlai},
+  Timestamp                = {2015.05.22}
+}
+
 @Article{tory2005parallel,
   Title                    = {A parallel coordinates style interface for exploratory volume visualization},
   Author                   = {Tory, Melanie and Potts, Simeon and Moller, Torsten},
@@ -1348,8 +1360,8 @@ high\;yang2003interactive\;zhang2012network\;;
 cking\;ellis2006enabling\;fua1999hierarchical\;geng2011angular\;guo201
 0interactive\;heinrich2011evaluation\;johansson2005revealing\;johansso
 n2006revealing\;mcdonnell2008illustrative\;muigg2011visual\;novotny200
-6outlier\;palmas2014edge\;peng2004clutter\;siirtola2000direct\;zachow2
-009visual\;zhou2008visual\;zhou2009splatting\;;
+6outlier\;palmas2014edge\;peng2004clutter\;siirtola2000direct\;zhou200
+8visual\;zhou2009splatting\;;
 1 ExplicitGroup:Interaction\;0\;fua1999navigating\;fua2000structure\;h
 auser2002angular\;martin1995high\;;
 1 ExplicitGroup:LineImprovement\;0\;graham2003using\;moustafa2002some\
