Visual Clutter finished. --ChufanLai

--- a/survey/parallelcoordinates.bib
+++ b/survey/parallelcoordinates.bib
@@ -297,6 +297,20 @@
   Timestamp                = {2015.05.02}
 }
 
+@InProceedings{ellis2005sampling,
+  Title                    = {The sampling lens: making sense of saturated visualisations},
+  Author                   = {Ellis, Geoffrey and Bertini, Enrico and Dix, Alan},
+  Booktitle                = {CHI'05 Extended Abstracts on Human Factors in Computing Systems},
+  Year                     = {2005},
+  Organization             = {ACM},
+  Pages                    = {1351--1354},
+
+  __markedentry            = {[chufanlai:1]},
+  File                     = {:The Sampling Lens\: Making Sense of Saturated Visualisations.pdf:PDF},
+  Owner                    = {chufanlai},
+  Timestamp                = {2015.05.25}
+}
+
 @Article{ellis2006enabling,
   Title                    = {Enabling automatic clutter reduction in parallel coordinate plots},
   Author                   = {Ellis, Geoffrey and Dix, Alan},
@@ -1133,6 +1147,7 @@
   Year                     = {2000},
   Pages                    = {415--420},
 
+  File                     = {:Higher order parallel coordinates.pdf:PDF},
   Owner                    = {chufanlai},
   Timestamp                = {2015.05.22}
 }
@@ -1237,6 +1252,20 @@
   File                     = {:30 Years of Multidimensional Multivariate Visualization.pdf:PDF},
   Owner                    = {chufanlai},
   Timestamp                = {2015.04.09}
+}
+
+@InProceedings{wong1996multiresolution,
+  Title                    = {Multiresolution multidimensional wavelet brushing},
+  Author                   = {Wong, Pak Chung and Bergeron, R Daniel},
+  Booktitle                = {Visualization'96. Proceedings.},
+  Year                     = {1996},
+  Organization             = {IEEE},
+  Pages                    = {141--148},
+
+  __markedentry            = {[chufanlai:1]},
+  File                     = {:Multiresolution Multidimensional Wavelet Brushing.pdf:PDF},
+  Owner                    = {chufanlai},
+  Timestamp                = {2015.05.25}
 }
 
 @InProceedings{yang2003interactive,
@@ -1359,8 +1388,8 @@ high\;yang2003interactive\;zhang2012network\;;
 cking\;ellis2006enabling\;fua1999hierarchical\;geng2011angular\;guo201
 0interactive\;heinrich2011evaluation\;johansson2005revealing\;johansso
 n2006revealing\;mcdonnell2008illustrative\;muigg2011visual\;novotny200
-6outlier\;palmas2014edge\;peng2004clutter\;siirtola2000direct\;zhou200
-8visual\;zhou2009splatting\;;
+6outlier\;palmas2014edge\;peng2004clutter\;siirtola2000direct\;wong199
+6multiresolution\;zhou2008visual\;zhou2009splatting\;;
 1 ExplicitGroup:Interaction\;0\;fua1999navigating\;fua2000structure\;h
 auser2002angular\;martin1995high\;;
 1 ExplicitGroup:LineImprovement\;0\;graham2003using\;moustafa2002some\
