--- a/survey/parallelcoordinates.tex
+++ b/survey/parallelcoordinates.tex
@@ -362,10 +362,18 @@
 
 而Zhou等人~\citep{zhou2014parallel}指出，在重合点处相切的曲线依然无法区分。他们提出用数据标签代替线段（如图\ref{fig:PC_Design_Label}），从而不论是直线或曲线，用户在放大视图时，总能通过标签的不同来区分数据。但标签相比于线段更容易相互遮挡、影响可读性，使得该方法不适合数据量大的情形。
 
+Dang等人则利用三维形式，将线元沿纵坐标堆叠起来（如图~\ref{fig:PC_Design_Stack}），这与线宽表示数量的方式~\citep{kosara2006parallel}有异曲同工之处。但三维视图容易产生遮挡、交互难度大，其实际效用还有较大争议。
+
+\begin{figure}[!htb]
+\centering
+\includegraphics[width=0.95\linewidth]{images/PC_Design_Curve5.eps}
+\caption{\label{fig:PC_Design_Stack}堆叠线元以解决数据重合问题。本图源自Dang等人的论文~\citep{kosara2006parallel}~。
+}
+\end{figure}
+
 \subsubsection{视觉混杂}
 
-视觉混杂问题是平行坐标研究的重点之一。要在有限的空间里表现大量的图元，主要有五种方法：刻画密度、视觉概要、聚类表达、数据采样、以及扩充
-显示空间。其中中间三种都致力于减少图元数目，有异曲同工之处。
+视觉混杂问题是平行坐标研究的重点之一。要在有限的空间里表现大量的图元，主要有四种方法：刻画密度、视觉概要、聚类表达、以及数据压缩。
 
 密度分布可以是图元或数据的密度，并借由不透明度或色调来表达。表现图元密度的最简单方法，是调节折线的不透明度，从而折线越密集的区域可见性越高（如图~\ref{fig:PC_Data_Time3}(b)）。也可以基于屏幕像素来统计折线堆叠的情况，再利用不透明度~\citep{artero2004uncovering}~\citep{johansson2007depth}或色调~\citep{mcdonnell2008illustrative}来呈现（如图~\ref{fig:PC_Design_Density1}）。
 
@@ -389,7 +397,7 @@
 
 进一步地，连续型平行坐标的相关研究~\citep{heinrich2009continuous}~\citep{lehmann2011features}~\citep{feng2010matching}~\citep{heinrich2011progressive}直接对数据域作密度估计，并揭示了相应的绘制方式（见图~\ref{fig:PC_Data_Continuous2}、图~\ref{fig:PC_Data_Uncertainty}）。如此一来，既无需费时绘制所有数据，避免了混杂问题，又能较好地保留数据分布的信息。然而在上述方法中，低密度区域的信息会因为较低的可见性而被忽略。Johansson等人~\citep{johansson2005revealing}利用传递函数（Transfer Function）来调节数据密度与可见性的关系，从而用户可以根据分析需求来凸显不同密度的区域。
 
-相比于表现密度，视觉概要的方法通过少量图元来概括数据分布。较简单的做法是分别描述各个维度的数据密度~\citep{hauser2002angular}~\citep{caat2007design}（如图~\ref{fig:PC_Design_Abstraction1}），但这无法揭示维度之间的联系。要对折线进行概括，除了密度，还须考虑其方向。Geng等人~\citep{geng2011angular}提出了带角度的直方图（Angular Histogram），在表达数据密度的同时，通过柱形的角度来指示折线走向（如图~\ref{fig:PC_Design_Abstraction2}）。Muigg等人~\citep{muigg2011visual}则利用噪声纹理（Noise Texture）传达方向信息（如图~\ref{fig:PC_Design_Abstraction1}），并将这一技术推广到其他基于折线的视图中。
+相比于表现密度，视觉概要的方法通过少量图元来概括数据分布。较简单的做法是分别描述各个维度的数据密度~\citep{hauser2002angular}~\citep{caat2007design}（如图~\ref{fig:PC_Design_Abstraction3}），但这无法揭示维度之间的联系。要对折线进行概括，除了密度，还须考虑其方向。Geng等人~\citep{geng2011angular}提出了带角度的直方图（Angular Histogram），在表达数据密度的同时，通过柱形的角度来指示折线走向（如图~\ref{fig:PC_Design_Abstraction2}）。Muigg等人~\citep{muigg2011visual}则利用噪声纹理（Noise Texture）传达方向信息（如图~\ref{fig:PC_Design_Abstraction1}），并将这一技术推广到其他基于折线的视图中。
 
 \begin{figure}[!htb]
 \centering
@@ -427,18 +435,16 @@
 }
 \end{figure}
 
-另一方面，数据聚类方法先组织数据再进行表达，较为经典的研究是Fua等人~\citep{fua1999hierarchical}提出的层次聚类（如图~\ref{fig:PC_Design_Clustering3}）。但由于折线的位置方向各异、容易混杂，视图中往往只标识各个聚类的中心及其范围~\citep{siirtola2000direct}，无法给出单个数据的细节。为弥补这一缺点，可以同时检测出异常数据，并将聚类和异常点分开表达~\citep{novotny2006outlier}（如图~\ref{fig:PC_Design_Clustering4}）。
+另一方面，数据聚类方法先组织数据再进行表达，较为经典的研究是Fua等人~\citep{fua1999hierarchical}提出的层次聚类（如图~\ref{fig:PC_Design_Clustering3}）。但由于折线的位置方向各异、容易混杂，视图中往往只标识各个聚类的中心及其范围~\citep{siirtola2000direct}~\citep{rosenbaum2012progressive}，无法给出单个数据的细节（如图~\ref{fig:PC_Data_Splatting}）。为弥补这一缺点，可以检测出异常数据，并将聚类和异常点分开表达~\citep{novotny2006outlier}（如图~\ref{fig:PC_Design_Clustering4}）。
 
 \begin{figure}[!htb]
 \centering
 \subfigure[]{\label{fig:PC_Design_Clustering3}
-\includegraphics[width=1.0\linewidth]{images/PC_Design_Clustering6.eps}}
+\includegraphics[width=0.92\linewidth]{images/PC_Design_Clustering6.eps}}
 \subfigure[]{\label{fig:PC_Design_Clustering4}
-\includegraphics[width=1.0\linewidth]{images/PC_Design_Clustering7.eps}}
+\includegraphics[width=0.92\linewidth]{images/PC_Design_Clustering7.eps}}
 \caption{聚类及异常点的表达。(a)、(b)两图分别来自论文~\citep{fua1999hierarchical}、~\citep{novotny2006outlier}。}
 \end{figure}
-
-而在曲线形式~\citep{theisel2000higher}~\citep{artero2004uncovering}出现以后，能够兼容单个数据和聚类的边缘捆绑（Edge Bundling）技术，就被广泛应用在聚类表达里。类似~\citep{zhou2008visual}，McDonnell等人~\citep{mcdonnell2008illustrative}将每条折线捆绑到相应聚类的中心（如图~\ref{fig:PC_Design_Clustering5}）。在此基础上，他们利用视觉概要的方法表达数据走势与密度，产生了适合用作数据展示的阐释型（Illustrative）平行坐标（如图~\ref{fig:PC_Design_Clustering6}）。
 
 \begin{figure}[!htb]
 \centering
@@ -449,7 +455,9 @@
 \caption{阐释型平行坐标。本图来自McDonnell等人的论文~\citep{mcdonnell2008illustrative}。}
 \end{figure}
 
-而Heinrich等人~\citep{heinrich2011evaluation}指出，斜率在坐标轴处不连续，会违反使用曲线解决数据重合问题的初衷（见~\ref{subsection:dataCoincidence}节）。他们改用B\'ezier曲线，并分离各聚类中心以避免相近的聚类相互遮挡（如图~\ref{fig:PC_Design_Clustering7}）。借鉴于平行集合的形式~\citep{kosara2006parallel}，Palmas等人~\citep{palmas2014edge}进一步缩短曲线汇聚的长度，并利用条带来表现各维度聚类之间的关系。
+而在曲线形式~\citep{theisel2000higher}~\citep{graham2003using}出现以后，能够兼容单个数据和聚类的边缘捆绑（Edge Bundling）技术，就被广泛应用在聚类表达里。类似~\citep{zhou2008visual}，McDonnell等人~\citep{mcdonnell2008illustrative}将每条折线捆绑到相应聚类的中心（如图~\ref{fig:PC_Design_Clustering5}）。在此基础上，他们利用视觉概要的方法表达数据走势与密度，产生了适合用作数据展示的阐释型（Illustrative）平行坐标（如图~\ref{fig:PC_Design_Clustering6}）。
+
+而Heinrich等人~\citep{heinrich2011evaluation}指出，斜率在坐标轴处不连续，会违反使用曲线解决数据重合问题的初衷（见~\ref{subsection:dataCoincidence}节）。他们改用B\'ezier曲线，并分离各聚类中心以避免相近的聚类相互遮挡（如图~\ref{fig:PC_Design_Clustering7}）。借鉴平行集合的形式~\citep{kosara2006parallel}，Palmas等人~\citep{palmas2014edge}进一步缩短曲线汇聚的长度，并利用条带来表现各维度聚类之间的关系。
 
 \begin{figure}[!htb]
 \centering
@@ -460,6 +468,35 @@
 \caption{基于B\'ezier曲线的边缘捆绑。(a)、(b)两图分别来自论文~\citep{heinrich2011evaluation}~\citep{palmas2014edge}。}
 \end{figure}
 
+鉴于散点图擅长表现数据聚类，Yuan等人~\citep{yuan2009scattering}在坐标轴之间嵌入散点图，并借助点的聚类来引导折线捆绑（如图~\ref{fig:PC_Design_Clustering9}）。该形式既表现了散点分布，也减轻了视觉混杂问题。但其效果取决于数据本身的聚类性能，且不适用于维度较高的情形。
+
+\begin{figure}[!htb]
+\centering
+\includegraphics[width=0.88\linewidth]{images/PC_Design_Clustering12.eps}
+\caption{\label{fig:PC_Design_Clustering9}折线的自动聚类。本图来自Zhou等人的论文~\citep{zhou2008visual}~。
+}
+\end{figure}
+
+数据压缩类的方法，即是通过少数具有代表性的样本来呈现数据分布。其中最简单的手段是数据采样，Ellis等人~\citep{ellis2005sampling}~\citep{ellis2006enabling}提出采样透镜（Sampling Lens）的方式，用户可以交互地指定需要采样的视图区域（如图~\ref{fig:PC_Design_Clustering10}）。但圆形的区域并不适合选择折线，且随机采样得到的样本不一定具有代表性。Wong等人~\citep{wong1996multiresolution}使用小波变换来压缩数据（如图~\ref{fig:PC_Design_Clustering11}），并允许用户通过折线刷选来指定压缩的精度和范围，但构造的样本并不具有现实意义。Rosenbaum等人~\citep{rosenbaum2012progressive}进一步引入了递归区域划分技术（Recursive Interval Subdivision），使用中位数作为代表样本，并将其与小波压缩、层次聚类相比较。至于哪种压缩更能保留数据特征，Johansson等人~\citep{johansson2008screen}提出了一种基于距离变换（Distance Transformation）的衡量方法，用以定量地指导压缩方式的选择（如图~\ref{fig:PC_Design_Sampling}）。
+
+\begin{figure}[!htb]
+\centering
+\subfigure[]{\label{fig:PC_Design_Clustering10}
+\includegraphics[width=0.52\linewidth]{images/PC_Design_Clustering14.eps}}
+\subfigure[]{\label{fig:PC_Design_Clustering11}
+\includegraphics[width=0.39\linewidth]{images/PC_Design_Clustering13.eps}}
+\caption{数据压缩类方法。图(a)、(b)分别来自论文~\citep{ellis2005sampling}和~\citep{palmas2014edge}。}
+\end{figure}
+
+\begin{figure}[!htb]
+\centering
+\subfigure[]{
+\includegraphics[width=0.9\linewidth]{images/PC_Design_Sampling2.eps}}
+\subfigure[]{
+\includegraphics[width=0.9\linewidth]{images/PC_Design_Sampling1.eps}}
+\caption{\label{fig:PC_Design_Sampling}不同的压缩方法在同一压缩率下的比较。其中图(a)丢失了低密度区域的信息，而图(b)则保留了更多的数据特征。本图修改自Johansson等人的论文~\citep{johansson2008screen}。}
+\end{figure}
+
 \subsubsection{坐标轴排序}
 
 \subsection{感知}
@@ -467,9 +504,6 @@
 
 \subsection{交互}
 \label{subsection:interactionImpro}
-
-\section{平行坐标的应用}
-\label{section:applications}
 
 \section{探讨与展望}
 \label{section:challenges}
