--- a/papers/PC_Data.bib
+++ b/papers/PC_Data.bib
@@ -46,6 +46,22 @@
   Timestamp                = {2015.04.08}
 }
 
+@Article{berthold2003visualizing,
+  Title                    = {Visualizing fuzzy points in parallel coordinates},
+  Author                   = {Berthold, Michael R and Hall, Lawrence O},
+  Journal                  = {Fuzzy Systems, IEEE Transactions on},
+  Year                     = {2003},
+  Number                   = {3},
+  Pages                    = {369--374},
+  Volume                   = {11},
+
+  __markedentry            = {},
+  File                     = {:Visualizing Fuzzy Points in Parallel Coordinates.pdf:PDF},
+  Owner                    = {chufanlai},
+  Publisher                = {IEEE},
+  Timestamp                = {2015.05.25}
+}
+
 @Article{blaas2008extensions,
   Title                    = {Extensions of parallel coordinates for interactive exploration of large multi-timepoint data sets},
   Author                   = {Blaas, Jorik and Botha, Charl P and Post, Frits H},
